--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,9 @@ body {
 
 .page-content {
   width: 100%;
-  max-width: 1000px !important;
-  margin: 0 auto;
+  display: flex;
+  justify-content: center; /* 水平居中 */
+  align-items: center; /* 垂直居中 */
 }
 
 .wrapper {
@@ -72,25 +73,27 @@ embed,
   background-color: #495DBB;
 }
 
+.title-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 .paper-meta {
   text-align: center !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 20px;
 }
 
-.title-section {
+.paper-meta p {
+  margin: 5px 0;
+  padding: 0;
   text-align: center;
-  margin-bottom: 20px;
-}
-
-.title-section h1 {
-  text-align: center;
-  margin: 0 auto;
-}
-
-/* 作者信息样式 */
-.paper-meta {
-  text-align: center;
-  margin-bottom: 20px;
 }
 
 /* 导航按钮样式 */
@@ -133,4 +136,15 @@ h2 {
 .paper-meta,
 .nav-buttons {
   text-align: center;
+}
+
+/* 设置所有链接的颜色为黑色 */
+a {
+  color: black; /* 设置链接颜色为黑色 */
+  text-decoration: none; /* 可选：去掉下划线 */
+}
+
+/* 可选：设置鼠标悬停时的颜色 */
+a:hover {
+  color: darkgray; /* 鼠标悬停时的颜色 */
 }
